--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,17 @@
 @tailwind utilities;
 
 
-html{
+:root{
   background-color: #000000;
 }
 
-body{
-  background-color: #000000;
-  @apply p-4
-}
+
 .card {
     backdrop-filter: blur(1px) saturate(13%);
     -webkit-backdrop-filter: blur(1px) saturate(13%);
     border-radius: 16px;
     background-color: rgba(12, 12, 12, 0.85);
     border: 1px solid rgba(255, 255, 255, 0.125);
-    
 }
 
 
@@ -27,9 +23,6 @@ body{
   border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
-.toto{
-  
-}
 
 .toto:hover{
   transition: all 0.3s;
