--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,15 @@
 
 
 :root{
-  background-color: #000000;
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.863) 34%, rgba(0,0,0,1) 100%); 
 }
 
 
 .card {
     backdrop-filter: blur(1px) saturate(13%);
-    -webkit-backdrop-filter: blur(1px) saturate(13%);
+    -webkit-backdrop-filter: blur(5px) saturate(13%);
     border-radius: 16px;
-    background-color: rgba(12, 12, 12, 0.85);
+    background-color: rgba(8, 8, 8, 0.781);
     border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
