se añadio el modo oscuro pero se removio el bg body que tanto me gustaba

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 
-:root{
+/* :root{
   background: radial-gradient(circle, rgba(0, 0, 0, 0.863) 34%, rgba(0,0,0,1) 100%); 
-}
+} */
 
 
 .card {
