--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,10 @@
   transition: all 0.3s;
   filter: drop-shadow(0 0 0.75rem #a5a3a3);
 }
+
+.imagene {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: -1;
+}
