--- a/src/App.css
+++ b/src/App.css
@@ -59,13 +59,16 @@ footer {
 .animation-alert{
   animation-name: alert;
   animation-duration: 500ms;
-  transition: all;
   position: sticky;
   position: -webkit-sticky;
-  top: 50%;
+  top: 10%;
   left: 100%;
+  @apply animate-pulse
 }
 
+.animation-alert:hover{
+  @apply animate-none
+}
 
 
 @keyframes alert {
@@ -74,7 +77,7 @@ footer {
     left: 0;
   }
   100% {
-    top: 50%;
+    top: 10%;
     left: 100%;
     position: sticky;
     position: -webkit-sticky;
