--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,26 @@
     background-position: 0% 50%;
   }
 }
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(36, 36, 36) rgb(53, 53, 53);
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgb(26, 26, 26);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(29, 29, 29);
+  border-radius: 20px;
+  border: 3px solid rgb(41, 41, 41);
+}
 
 
 :root {
