--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,14 @@
 
 
 @font-face{
-  font-family: "Monserat";
-  src: url("./assets/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
+  font-family: "Ubuntu";
+  src: url("./assets/font/Ubuntu-Light.ttf") format("truetype");
   font-weight:300;
+}
+
+@font-face {
+  font-family: "UbuntuLight";
+  src: url("./assets/font/Ubuntu-Medium.ttf") format("truetype");
 }
 
 
@@ -61,7 +66,7 @@
 
 
 *{
-  font-family: "Monserat";
+  font-family: "Ubuntu" ;
 }
 
 body {
